--- a/index.ipynb
+++ b/index.ipynb
@@ -86,45 +86,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Type A: <class 'set'>, A: {2, 4, 6, 8, 10}\""
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create set A\n",
-    "A = None\n",
+    "A = {2,4,6,8,10}\n",
     "'Type A: {}, A: {}'.format(type(A), A)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Type B: <class 'set'>, B: {8, 11, 3, 12}\""
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create set B\n",
-    "B = None\n",
+    "B = {3,8,11,12}\n",
     "'Type B: {}, B: {}'.format(type(B), B)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Type C: <class 'set'>, C: {2, 3, 6, 8, 9, 11}\""
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create set C\n",
-    "C = None\n",
+    "C = set([2,3,6,8,9,11])\n",
     "'Type C: {}, C: {}'.format(type(C), C)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Type U: <class 'set'>, U: {1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12}\""
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create universal set U\n",
-    "U = None\n",
+    "U = {1,2,3,4,5,6,7,8,9,10,11,12}\n",
     "'Type U: {}, U: {}'.format(type(U), U)"
    ]
   },
@@ -153,11 +197,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{8}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "A_inters_B =  None\n",
+    "A_inters_B =  A & B\n",
     "A_inters_B"
    ]
   },
@@ -170,11 +225,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 3, 4, 6, 8, 9, 10, 11}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "A_union_C = None\n",
+    "A_union_C = A | C\n",
     "A_union_C"
    ]
   },
@@ -187,11 +253,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 3, 5, 7, 9, 11, 12}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "A_comp = None \n",
+    "A_comp = (A | U) - (A & U) \n",
+    "A_comp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 3, 5, 7, 9, 11, 12}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A_comp = U.difference(A)\n",
     "A_comp"
    ]
   },
@@ -204,11 +302,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 5, 7, 9}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "A_union_B_comp = None\n",
+    "A_union_B_comp = U.difference(A | B)\n",
+    "A_union_B_comp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 5, 7, 9}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A_union_B_comp = U - (A | B) \n",
     "A_union_B_comp"
    ]
   },
@@ -221,11 +351,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{12}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "B_inters_C_comp = None\n",
+    "B_inters_C_comp = B & (U - C)\n",
     "B_inters_C_comp"
    ]
   },
@@ -238,11 +379,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 4, 6, 10}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "compl_of_B = None\n",
+    "compl_of_B = A - B\n",
     "compl_of_B"
    ]
   },
@@ -255,12 +407,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 6, 8, 9}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "C_compl_B_compl_A = None\n",
+    "C_compl_B_compl_A = C - (B - A)\n",
     "C_compl_B_compl_A "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 6, 8, 9}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C_compl_B_compl_A= C-(B-A)\n",
+    "C_compl_B_compl_A"
    ]
   },
   {
@@ -272,11 +458,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 6, 8, 9}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "C_inters_A_union_C_min_B= None\n",
+    "C_inters_A_union_C_min_B= (C & A) | (C-B)\n",
+    "C_inters_A_union_C_min_B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2, 6, 8, 9}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C_inters_A_union_C_min_B= (C&A)|(C-B)\n",
     "C_inters_A_union_C_min_B"
    ]
   },
@@ -312,31 +530,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
    "source": [
-    "left_hand_eq = None\n",
+    "left_hand_eq = len(A|B|C)\n",
     "print(left_hand_eq)  # 9"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
    "source": [
-    "right_hand_eq = None\n",
+    "right_hand_eq = len(A) + len(B) + len(C) - len(A&B)-len(A&C)-len(B&C)+len(A&B&C) \n",
     "print(right_hand_eq) # 9"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None # Use a comparison operator to compare `left_hand_eq` and `right_hand_eq`. Needs to say \"True\"."
+    "left_hand_eq == right_hand_eq"
    ]
   },
   {
@@ -355,11 +600,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Nina = set([\"Cat\",\"Dog\",\"Rabbit\",\"Donkey\",\"Parrot\", \"Goldfish\"])\n",
+    "Nina = {\"Cat\",\"Dog\",\"Rabbit\",\"Donkey\",\"Parrot\", \"Goldfish\"}\n",
     "Mary = set([\"Dog\",\"Chinchilla\",\"Horse\", \"Chicken\"])\n",
     "Eve = set([\"Rabbit\", \"Turtle\", \"Goldfish\"])"
    ]
@@ -397,11 +642,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Goldfish', 'Rabbit'}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None\n",
+    "Eve.remove('Turtle')\n",
     "Eve # should be {'Rabbit', 'Goldfish'}"
    ]
   },
@@ -414,11 +670,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Cat',\n",
+       " 'Chicken',\n",
+       " 'Chinchilla',\n",
+       " 'Dog',\n",
+       " 'Donkey',\n",
+       " 'Goldfish',\n",
+       " 'Horse',\n",
+       " 'Parrot',\n",
+       " 'Rabbit'}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None\n",
+    "Nina.update(Mary)\n",
     "Nina # {'Chicken', 'Horse', 'Chinchilla', 'Parrot', 'Rabbit', 'Donkey', 'Dog', 'Cat', 'Goldfish'}"
    ]
   },
@@ -431,11 +706,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None\n",
+    "Mary.clear()\n",
     "Mary  # set()"
    ]
   },
@@ -448,11 +734,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None\n",
+    "n_species_Nina = len(Nina)\n",
     "n_species_Nina # 9"
    ]
   },
@@ -465,12 +762,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None\n",
-    "Nina # 7"
+    "Nina.difference_update(Eve)\n",
+    "len(Nina) # 7"
    ]
   },
   {
@@ -518,24 +826,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "#Load Europe and EU\n",
-    "europe = pd.read_excel('Europe_and_EU.xlsx', sheet_name = 'Europe') \n",
-    "eu = pd.read_excel('Europe_and_EU.xlsx', sheet_name = 'EU')\n",
+    "europe = pd.read_excel('Europe_and_EU.xlsx', sheet_name = 'Europe')\n",
     "\n",
     "#Use pandas to remove any whitespace from names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>2017 population</th>\n",
+       "      <th>% of pop.</th>\n",
+       "      <th>Average relative annual growth</th>\n",
+       "      <th>Average absolute annual growth</th>\n",
+       "      <th>Official figure</th>\n",
+       "      <th>Date of last figure</th>\n",
+       "      <th>Source</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>82800000</td>\n",
+       "      <td>16.18</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>628876</td>\n",
+       "      <td>82576900</td>\n",
+       "      <td>2017-03-31</td>\n",
+       "      <td>Official estimate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>France</td>\n",
+       "      <td>67210459</td>\n",
+       "      <td>13.10</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>265557</td>\n",
+       "      <td>67174000</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>Monthly official estimate</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>65808573</td>\n",
+       "      <td>12.86</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>428793</td>\n",
+       "      <td>65648100</td>\n",
+       "      <td>2017-06-30</td>\n",
+       "      <td>Official estimate</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Rank         Country  2017 population  % of pop.  \\\n",
+       "0     1        Germany          82800000      16.18   \n",
+       "1     2          France         67210459      13.10   \n",
+       "2     3  United Kingdom         65808573      12.86   \n",
+       "\n",
+       "   Average relative annual growth  Average absolute annual growth  \\\n",
+       "0                            0.76                          628876   \n",
+       "1                            0.40                          265557   \n",
+       "2                            0.65                          428793   \n",
+       "\n",
+       "   Official figure Date of last figure                     Source  \n",
+       "0         82576900          2017-03-31          Official estimate  \n",
+       "1         67174000          2018-01-01  Monthly official estimate  \n",
+       "2         65648100          2017-06-30          Official estimate  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "europe.head(3) #preview dataframe\n",
     "eu.head(3)"
@@ -543,11 +945,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0            Germany\n",
+       "1             France\n",
+       "2     United Kingdom\n",
+       "3              Italy\n",
+       "4              Spain\n",
+       "5             Poland\n",
+       "6            Romania\n",
+       "7        Netherlands\n",
+       "8            Belgium\n",
+       "9             Greece\n",
+       "10    Czech Republic\n",
+       "11          Portugal\n",
+       "12            Sweden\n",
+       "13           Hungary\n",
+       "14           Austria\n",
+       "15          Bulgaria\n",
+       "16           Denmark\n",
+       "17           Finland\n",
+       "18          Slovakia\n",
+       "19           Ireland\n",
+       "20           Croatia\n",
+       "21         Lithuania\n",
+       "22          Slovenia\n",
+       "23            Latvia\n",
+       "24           Estonia\n",
+       "25            Cyprus\n",
+       "26        Luxembourg\n",
+       "27             Malta\n",
+       "Name: Country, dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code comes here"
+    "europe.Country.map(lambda x: x.strip()) #Remove any whitespace from names\n",
+    "eu.Country.map(lambda x: x.strip())"
    ]
   },
   {
@@ -581,7 +1023,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
